--- a/templates/home.html
+++ b/templates/home.html
@@ -119,53 +119,11 @@ block content %}
       </div>
       <div>icon</div>
     </div>
-    <div id="message-list"></div>
-    <!-- <div class="flex flex-col gap-3 h-96 overflow-auto">
-      <div class="flex items-start gap-2.5">
-        <img
-          class="w-8 h-8 rounded-full"
-          src="https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav"
-          alt="Jese image"
-        />
-        <div
-          class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 border-gray-200 bg-gray-100 rounded-e-xl rounded-es-xl dark:bg-gray-700"
-        >
-          <p class="text-sm font-normal pb-2.5 text-gray-900 dark:text-white">
-            That's awesome. I think our users will really appreciate the
-            improvements.
-          </p>
-          <div class="flex items-center space-x-2 rtl:space-x-reverse">
-            <span class="text-sm font-normal text-gray-500 dark:text-gray-400"
-              >11:46</span
-            >
-          </div>
-        </div>
-      </div>
-      <div class="flex justify-end items-start gap-2.5">
-        <img
-          class="w-8 h-8 rounded-full"
-          src="https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav"
-          alt="Jese image"
-        />
-        <div
-          class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 border-blue-400 bg-blue-300 rounded-e-xl rounded-es-xl dark:bg-gray-700"
-        >
-          <p class="text-sm font-normal pb-2.5 text-gray-900 dark:text-white">
-            That's awesome. I think our users will really appreciate the
-            improvements.
-          </p>
-          <div class="flex items-center space-x-2 rtl:space-x-reverse">
-            <span class="text-sm font-normal text-gray-500 dark:text-gray-400"
-              >Sent</span
-            >
-            <span class="text-sm font-normal text-gray-500 dark:text-gray-400"
-              >11:46</span
-            >
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <form onsubmit="(e) => sendMessage(e, 2)">
+    <div
+      class="flex flex-col gap-3 h-96 overflow-auto py-2"
+      id="message-list"
+    ></div>
+    <div>
       <label for="chat" class="sr-only">Your message</label>
       <div
         class="flex items-center px-3 py-2 rounded-lg bg-gray-50 dark:bg-gray-700"
@@ -231,6 +189,7 @@ block content %}
         ></textarea>
         <button
           type="submit"
+          onclick="sendMessage(2)"
           class="inline-flex justify-center p-2 text-blue-600 rounded-full cursor-pointer hover:bg-blue-100 dark:text-blue-500 dark:hover:bg-gray-600"
         >
           <svg
@@ -247,7 +206,7 @@ block content %}
           <span class="sr-only">Send message</span>
         </button>
       </div>
-    </form>
+    </div>
   </div>
 </div>
 <script>
@@ -258,12 +217,26 @@ block content %}
       console.log(messages);
       let messageContainer = document.getElementById("message-list");
       messageContainer.innerHTML = "";
-
+      const imgSrc =
+        "https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav";
       messages.forEach((msg) => {
-        let msgElement = document.createElement("div");
-        msgElement.classList.add("message-item");
-        msgElement.innerHTML = `<strong>${msg.senderId}:</strong> ${msg.content} <br><small>${msg.created_at}</small>`;
-        messageContainer.appendChild(msgElement);
+        const messageDiv = document.createElement("div");
+        messageDiv.className = `flex justify-end items-start gap-2.5`;
+
+        messageDiv.innerHTML = `
+          <img class="w-8 h-8 rounded-full" src="${imgSrc}" alt="User Image" />
+          <div class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 border-blue-400 bg-blue-500 rounded-e-xl rounded-es-xl dark:bg-gray-700">
+            <p class="text-sm font-normal pb-2.5 text-white dark:text-white">
+              ${msg.content}
+            </p>
+            <div class="flex items-center space-x-2 rtl:space-x-reverse">
+              <span class="text-sm font-normal text-gray-300 dark:text-gray-400">Sent</span>
+              <span class="text-sm font-normal text-gray-300 dark:text-gray-400">${msg.created_at}</span>
+            </div>
+          </div>
+        `;
+
+        messageContainer.appendChild(messageDiv);
       });
     } catch (error) {
       console.error("Error fetching messages:", error);
@@ -274,28 +247,16 @@ block content %}
 
   fetchMessages();
 
-  async function sendMessage(e, receiverId) {
-    e.preventDefault();
+  async function sendMessage(receiverId) {
+    // e.preventDefault();
     let content = document.getElementById("messageContent").value;
 
     await fetch("/send", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ content: content, receiver_id: receiverId }),
-    })
-      .then((response) => {
-        response.json();
-        console.log(response);
-      })
-      .then((data) => {
-        if (data.success) {
-          console.log(data.success);
-          document.getElementById("messageContent").value = "";
-        } else {
-          console.log("Error: " + data.error);
-        }
-      })
-      .catch((error) => console.error("Error:", error));
+    });
+    document.getElementById("messageContent").value = "";
   }
 </script>
 {% endblock %}
