--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,14 @@
 {% extends "layouts/index.html" %} {% block title %}Home Page{% endblock %} {%
 block content %}
-<div class="flex gap-5">
+<div class="flex gap-5 justify-center">
   <div class="bg-white p-6 rounded-lg shadow-md w-96 flex flex-col gap-3">
     <div>
       <h1 class="text-2xl font-semibold">Welcome to ChaTAH!</h1>
       <p class="text-gray-500">The best chat app in the world!</p>
     </div>
     {% if user %}
-    <div
+    <a
+      href="/profile"
       class="flex items-center space-x-4 rtl:space-x-reverse p-3 bg-gray-200 rounded-lg my-2"
     >
       <div class="shrink-0">
@@ -25,7 +26,7 @@ block content %}
           {{ user.email }}
         </p>
       </div>
-    </div>
+    </a>
     {% endif %}
     <div class="border p-3 rounded-lg border-gray-400">
       <h1 class="text-xl fony-semibold">Chat with your friends</h1>
@@ -75,7 +76,10 @@ block content %}
           class="max-w-md divide-y max-h-96 overflow-auto divide-gray-200 dark:divide-gray-700"
         >
           {% for u in users %}
-          <li class="pb-3 sm:pb-4">
+          <li
+            class="pb-3 sm:pb-4 cursor-pointer user-item"
+            data-user-id="{{u.id}}"
+          >
             <div class="flex items-center space-x-4 rtl:space-x-reverse">
               <div class="shrink-0">
                 <img
@@ -101,137 +105,92 @@ block content %}
       </div>
     </div>
   </div>
-  <div
-    class="flex-1 flex flex-col justify-between bg-white p-6 rounded-lg shadow-md"
-  >
-    <div class="flex items-center space-x-4 rtl:space-x-reverse border-b pb-4">
+  <div id="message-con"></div>
+</div>
+<script>
+  async function appendChatBox(uid) {
+    const response = await fetch("/getuser/" + uid);
+    const user = await response.json();
+    console.log(user);
+    let messageCon = document.getElementById("message-con");
+    messageCon.className = "flex-1";
+    let chatBox = document.createElement("div");
+    chatBox.className =
+      "flex flex-col justify-between bg-white p-6 rounded-lg shadow-md w-[30rem]";
+
+    chatBox.innerHTML = `
+    <div class="flex items-center space-x-4 rtl:space-x-reverse border-b border-gray-300 pb-4">
       <div class="shrink-0">
-        <img
-          class="w-8 h-8 rounded-full"
-          src="https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav"
-          alt="Neil image"
-        />
+        <img class="w-8 h-8 rounded-full" src="https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav" alt="Neil image" />
       </div>
       <div class="flex-1 min-w-0">
-        <p class="text-lg font-medium text-gray-900 truncate dark:text-white">
-          Bonnie Green
-        </p>
+        <p class="text-lg font-medium text-gray-900 truncate dark:text-white">${user.username}</p>
+        <p class="text-sm text-gray-400 truncate dark:text-white">${user.email}</p>
       </div>
       <div>icon</div>
     </div>
-    <div
-      class="flex flex-col gap-3 h-96 overflow-auto py-2"
-      id="message-list"
-    ></div>
+    <div class="flex flex-col gap-3 h-96 overflow-auto py-2" id="message-list"></div>
     <div>
       <label for="chat" class="sr-only">Your message</label>
-      <div
-        class="flex items-center px-3 py-2 rounded-lg bg-gray-50 dark:bg-gray-700"
-      >
-        <button
-          type="button"
-          class="inline-flex justify-center p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600"
-        >
-          <svg
-            class="w-5 h-5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 20 18"
-          >
-            <path
-              fill="currentColor"
-              d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z"
-            />
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M18 1H2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1Z"
-            />
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z"
-            />
+      <div class="flex items-center px-3 py-2 rounded-lg bg-gray-50 dark:bg-gray-700">
+        <button type="button" class="inline-flex justify-center p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600">
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
+            <path fill="currentColor" d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z"/>
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 1H2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1Z"/>
           </svg>
           <span class="sr-only">Upload image</span>
         </button>
-        <button
-          type="button"
-          class="p-2 text-gray-500 rounded-lg cursor-pointer hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600"
-        >
-          <svg
-            class="w-5 h-5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 20 20"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M13.408 7.5h.01m-6.876 0h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM4.6 11a5.5 5.5 0 0 0 10.81 0H4.6Z"
-            />
-          </svg>
-          <span class="sr-only">Add emoji</span>
-        </button>
-        <textarea
-          id="messageContent"
-          rows="1"
-          class="block mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          placeholder="Your message..."
-        ></textarea>
-        <button
-          type="submit"
-          onclick="sendMessage(2)"
-          class="inline-flex justify-center p-2 text-blue-600 rounded-full cursor-pointer hover:bg-blue-100 dark:text-blue-500 dark:hover:bg-gray-600"
-        >
-          <svg
-            class="w-5 h-5 rotate-90 rtl:-rotate-90"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 18 20"
-          >
-            <path
-              d="m17.914 18.594-8-18a1 1 0 0 0-1.828 0l-8 18a1 1 0 0 0 1.157 1.376L8 18.281V9a1 1 0 0 1 2 0v9.281l6.758 1.689a1 1 0 0 0 1.156-1.376Z"
-            />
+        <textarea id="messageContent" rows="1" class="block mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Your message..."></textarea>
+        <button type="submit" onclick="sendMessage(1)" class="inline-flex justify-center p-2 text-blue-600 rounded-full cursor-pointer hover:bg-blue-100 dark:text-blue-500 dark:hover:bg-gray-600">
+          <svg class="w-5 h-5 rotate-90 rtl:-rotate-90" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
+            <path d="m17.914 18.594-8-18a1 1 0 0 0-1.828 0l-8 18a1 1 0 0 0 1.157 1.376L8 18.281V9a1 1 0 0 1 2 0v9.281l6.758 1.689a1 1 0 0 0 1.156-1.376Z"/>
           </svg>
           <span class="sr-only">Send message</span>
         </button>
       </div>
     </div>
-  </div>
-</div>
-<script>
-  async function fetchMessages() {
+    `;
+
+    messageCon.appendChild(chatBox);
+  }
+
+  async function fetchMessages(userID) {
     try {
-      const response = await fetch("/messages");
+      const response = await fetch("/messages/" + userID);
       const messages = await response.json();
       console.log(messages);
+      await appendChatBox(userID);
       let messageContainer = document.getElementById("message-list");
       messageContainer.innerHTML = "";
       const imgSrc =
         "https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav";
       messages.forEach((msg) => {
         const messageDiv = document.createElement("div");
-        messageDiv.className = `flex justify-end items-start gap-2.5`;
+        messageDiv.className = `flex ${
+          msg.senderId.toString() === userID.toString()
+            ? "justify-end"
+            : "justify-start"
+        } items-start gap-2.5`;
 
+        const userImage =
+          msg.senderId.toString() !== userID.toString()
+            ? `<img class="w-8 h-8 rounded-full" src="${imgSrc}" alt="User Image" />`
+            : "";
         messageDiv.innerHTML = `
-          <img class="w-8 h-8 rounded-full" src="${imgSrc}" alt="User Image" />
-          <div class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 border-blue-400 bg-blue-500 rounded-e-xl rounded-es-xl dark:bg-gray-700">
-            <p class="text-sm font-normal pb-2.5 text-white dark:text-white">
+        ${userImage}
+          <div class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 ${
+            msg.senderId.toString() === userID.toString()
+              ? "border-blue-400 bg-blue-500 text-white"
+              : "border-gray-200 bg-gray-200 text-dark"
+          } rounded-e-xl rounded-es-xl dark:bg-gray-700">
+            <p class="text-sm font-normal pb-2.5">
               ${msg.content}
             </p>
             <div class="flex items-center space-x-2 rtl:space-x-reverse">
               <span class="text-sm font-normal text-gray-300 dark:text-gray-400">Sent</span>
-              <span class="text-sm font-normal text-gray-300 dark:text-gray-400">${msg.created_at}</span>
+              <span class="text-sm font-normal text-gray-300 dark:text-gray-400">${
+                msg.created_at
+              }</span>
             </div>
           </div>
         `;
@@ -243,9 +202,16 @@ block content %}
     }
   }
 
-  setInterval(fetchMessages, 3000);
+  document.querySelectorAll(".user-item").forEach((user) => {
+    user.addEventListener("click", () => {
+      let userId = user.getAttribute("data-user-id");
+      fetchMessages(userId);
+    });
+  });
 
-  fetchMessages();
+  // setInterval(fetchMessages, 3000);
+
+  // fetchMessages();
 
   async function sendMessage(receiverId) {
     // e.preventDefault();
