--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile</title>
-  </head>
-  <body>
-    <h1>Profile</h1>
-    <p>Username: {{ user.username }}</p>
-    <p>Email: {{ user.email }}</p>
-    <a href="{{ url_for('logout') }}">Logout</a>
-  </body>
-</html>
+{% extends "layouts/index.html" %} {% block title %}Home Page{% endblock %} {%
+block content %}
+<div class="flex justify-center">
+  <div class="flex-1 bg-white p-3 rounded-lg">
+    <h1 class="text-xl">Profile</h1>
+    <div class="shrink-0 bg-blue-500 pt-3 px-2">
+      <img
+        class="w-20 h-20 rounded-lg border-2 border-gray-100"
+        src="https://th.bing.com/th?id=ODL.22e3f8b3c7fb30c868537ff395d61b3a&w=146&h=146&c=7&rs=1&qlt=80&o=6&cb=15&pid=RichNav"
+        alt="Neil image"
+      />
+    </div>
+    <div>
+      <span class="text-lg">{{ user.username }}</span> <br />
+      <span class="text-gray-400">{{ user.email }}</span>
+    </div>
+    <div class="py-3">
+      <a href="#" class="text-white px-3 py-2 bg-blue-700 rounded-lg">Edit</a>
+      <a href="#" class="text-white px-3 py-2 bg-red-600 rounded-lg">Delete</a>
+    </div>
+  </div>
+</div>
+{% endblock %}
