--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,10 @@
           >
             Welcome
           </h5>
-          {% if message %}
+          {% with messages = get_flashed_messages(with_categories=true) %} {% if
+          messages %} {% for category, message in messages %}
+          <div class="alert alert-{{ category }}">{{ message }}</div>
+          {% endfor %} {% endif %} {% endwith %} {% if message %}
           <span>{{ message }}</span>
           {% endif %}
           <div>
