--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,21 @@
     />
   </head>
   <body>
-    <div></div>
+    <div class="flex justify-center items-center h-screen bg-white">
+      <div>
+        <img
+          class="rounded-full border-2 border-blue-200"
+          width="100"
+          src="https://th.bing.com/th/id/OIP.utANnR_yzqzbf8wKFvnnCAHaHa?rs=1&pid=ImgDetMain"
+        />
+        <h1 class="text-2xl font-semibold">ChatTAH!</h1>
+        <a href="#"></a>
+      </div>
+    </div>
+    <script>
+      setTimeout(() => {
+        window.location.assign("/login");
+      }, 2000);
+    </script>
   </body>
 </html>
