--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,37 @@
 {% extends "layouts/index.html" %} {% block title %}Profile{% endblock %} {%
 block content %}
 <div class="flex justify-center" id="profile-container">
+  <div class="flex justify-center w-96" id="profile">
+    <div class="flex-1 bg-white p-3 rounded-lg">
+      <h1 class="text-xl">Profile</h1>
+      <div class="shrink-0 bg-blue-500 pt-3 pb-2 px-2">
+        <img
+          class="rounded-lg border-2 border-gray-100"
+          src="{{url_for('static',filename='uploads/' + user.image)}}"
+          width="100"
+          alt="Neil image"
+        />
+      </div>
+      <div>
+        <span class="text-lg">{{ user.username }}</span> <br />
+        <span class="text-gray-400">{{ user.email }}</span>
+      </div>
+      <div class="py-3">
+        <a
+          href="#"
+          onClick="updateProfileForm()"
+          class="text-white px-3 py-2 bg-blue-700 rounded-lg"
+          >Edit</a
+        >
+        <a
+          href="#"
+          class="text-white px-3 py-2 rounded-lg"
+          style="background: #f73d3d"
+          >Delete</a
+        >
+      </div>
+    </div>
+  </div>
   <div class="w-96 h-screen bg-white p-3 rounded" id="form">
     <
     <form
@@ -9,28 +40,47 @@ block content %}
       method="POST"
       enctype="multipart/form-data"
     >
-      <label for="username">Username:</label>
-      <input
-        type="text"
-        id="username"
-        name="username"
-        value="{{ user.username }}"
-        required
-      />
-      <br /><br />
-
-      <label for="email">Email:</label>
-      <input
-        type="email"
-        id="email"
-        name="email"
-        value="{{ user.email }}"
-        required
-      />
-      <br /><br />
+      <div class="mb-5">
+        <label
+          for="email"
+          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+          >Your email</label
+        >
+        <input
+          type="email"
+          value="{{ user.email }}"
+          id="email"
+          name="email"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          placeholder="name@flowbite.com"
+          required
+        />
+      </div>
+      <div class="mb-5">
+        <label
+          for="name"
+          class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+          >Your name</label
+        >
+        <input
+          type="text"
+          value="{{ user.username }}"
+          id="name"
+          name="username"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          placeholder="name@flowbite.com"
+          required
+        />
+      </div>
 
       <label for="file">Profile Picture:</label>
-      <input type="file" id="file" name="file" />
+      <input
+        type="file"
+        id="file"
+        name="file"
+        onchange="onFileChange"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      />
       <br /><br />
 
       {% if user.image %}
@@ -41,149 +91,67 @@ block content %}
         width="150"
       />
       {% endif %}
+      <img src="" alt="Profile Picture" id="image" width="150" />
       <br /><br />
 
-      <button type="submit">Update Profile</button>
+      <button type="submit" class="bg-blue-500 text-white">
+        Update Profile
+      </button>
     </form>
   </div>
 </div>
 <script>
   const container = document.getElementById("profile-container");
+  const formCon = document.getElementById("form");
+  const profileCon = document.getElementById("profile");
 
   function onMount() {
-    container.innerHTML = `<div class="flex justify-center w-96">
-    <div class="flex-1 bg-white p-3 rounded-lg">
-      <h1 class="text-xl">Profile</h1>
-      <div class="shrink-0 bg-blue-500 pt-3 pb-2 px-2">
-        <img
-          class="rounded-lg border-2 border-gray-100"
-          src="{{url_for('static',filename='src/avatar.PNG')}}"
-          width="100"
-          alt="Neil image"
-        />
-      </div>
-      <div>
-        <span class="text-lg">{{ user.username }}</span> <br />
-        <span class="text-gray-400">{{ user.email }}</span>
-      </div>
-      <div class="py-3">
-        <a href="#" onClick="updateProfileForm()" class="text-white px-3 py-2 bg-blue-700 rounded-lg">Edit</a>
-        <a
-          href="#"
-          class="text-white px-3 py-2 rounded-lg"
-          style="background: #f73d3d"
-          >Delete</a
-        >
-      </div>
-    </div>
-  </div>`;
+    formCon.style.display = "none";
   }
 
   function updateProfileForm() {
-    container.innerHTML = `
-    <div class="w-96" id="form">
-      <form class="space-y-6" method="POST">
-            <div class="flex flex-col items-center">
-              {% if message %}
-              <span>{{ message }}</span>
-              {% endif %}
-            <div>
-            <div>
-            <div class="flex justify-center p-3">
-              <img id="preview" src="" alt="Selected Image" style="max-width: 200px; display: none;">
-            </div>
-            <input
-                type="file"
-                name="image"
-                id="image"
-                accept="image/*" onchange="onFileChange(event)"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-            />
-            <label
-                for="name"
-                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Your name</label
-            >
-            <input
-                type="name"
-                name="username"
-                id="name"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-                placeholder="Enter your name"
-                required
-            />
-            </div>
-            <div>
-            <label
-                for="email"
-                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                >Your email</label
-            >
-            <input
-                type="email"
-                name="email"
-                id="email"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-                placeholder="name@company.com"
-                required
-            />
-            </div>
-            <div>
-            </div>
-            <button
-            type="submit"
-            class="w-full  pt-3 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-            >
-            Create your account
-            </button>
-            <div class="text-sm font-medium text-gray-500 dark:text-gray-300">
-            Already have an account?
-            <a href="/auth/login" class="text-blue-700 hover:underline dark:text-blue-500"
-                >Log in</a
-            >
-            </div>
-        </form>
-      </div>
-    `;
+    profileCon.style.display = "none";
+    formCon.style.display = "block";
   }
-  // onMount();
+  onMount();
+  document.addEventListener("DOMContentLoaded", function () {
+    document
+      .getElementById("profile-form")
+      .addEventListener("submit", async function (event) {
+        event.preventDefault();
 
-  $(document).ready(function () {
-    $("#profile-form").on("submit", function (event) {
-      event.preventDefault();
+        let formData = new FormData(this);
 
-      var formData = new FormData(this);
+        try {
+          let response = await fetch("{{ url_for('users.profile') }}", {
+            method: "POST",
+            body: formData,
+          });
 
-      $.ajax({
-        url: "{{ url_for('users.profile') }}",
-        type: "POST",
-        data: formData,
-        processData: false,
-        contentType: false,
-        success: function (response) {
-          alert(response.message);
-          location.reload();
-        },
-        error: function (xhr) {
-          alert("Error: " + xhr.responseJSON.error);
-        },
+          let result = await response.json();
+
+          if (response.ok) {
+            alert(result.message);
+            location.reload();
+          } else {
+            throw new Error(result.error || "Something went wrong");
+          }
+        } catch (error) {
+          alert("Error: " + error.message);
+        }
       });
-    });
   });
 
   function onFileChange(event) {
-    const preview = document.getElementById("preview");
+    const preview = document.getElementById("image");
     const file = event.target.files[0];
-
+    console.log(file);
     if (file) {
       const reader = new FileReader();
       reader.onload = function (e) {
         preview.src = e.target.result;
-        preview.style.display = "block";
       };
       reader.readAsDataURL(file);
-    } else {
-      preview.style.display = "none";
     }
   }
 </script>
