--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,9 @@ block content %}
           >Edit</a
         >
         <a
-          href="#"
+          data-user-id="{{user.id}}"
+          id="delete"
+          onClick="deleteAccount()"
           class="text-white px-3 py-2 rounded-lg"
           style="background: #f73d3d"
           >Delete</a
@@ -78,7 +80,7 @@ block content %}
         type="file"
         id="file"
         name="file"
-        onchange="onFileChange"
+        onChange="onFileChange"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       />
       <br /><br />
@@ -107,6 +109,7 @@ block content %}
 
   function onMount() {
     formCon.style.display = "none";
+    profileCon.style.display = "block";
   }
 
   function updateProfileForm() {
@@ -152,6 +155,22 @@ block content %}
         preview.src = e.target.result;
       };
       reader.readAsDataURL(file);
+    }
+  }
+
+  async function deleteAccount() {
+    let user_id = document
+      .getElementById("delete")
+      .getAttribute("data-user-id");
+    if (confirm("Do you want to delete this account?")) {
+      const res = await fetch("/users/delete/" + user_id);
+      const result = await res.json();
+      if (result.message) {
+        alert(result.message);
+        window.location.assign("/auth/login");
+      } else {
+        alert(result.error);
+      }
     }
   }
 </script>
