Enhance delete button visibility by changing text color to white

--- a/templates/home.html
+++ b/templates/home.html
@@ -192,7 +192,7 @@ block content %}
       </div>
       ${
         user.message_count > 0
-          ? '<div id="delete" style="background: #f73d3d" class="p-2 rounded-lg">delete</div>'
+          ? '<div id="delete" style="background: #f73d3d" class="p-2 rounded-lg text-white">delete</div>'
           : ""
       }
     </div>
