--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChatTAH!</title>
+    <link rel="icon" href="{{url_for('static',filename='src/logo.jpg')}}" />
     <link
       rel="stylesheet"
       href="{{url_for('static',filename='dist/css/output.css')}}"
